--- a/Proyecto.BLL/Proyecto.BLL.csproj
+++ b/Proyecto.BLL/Proyecto.BLL.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\Proyecto.MODELS\Proyecto.MODELS.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Servicios\" />
+  </ItemGroup>
+
 </Project>
